# pdf-editor

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  ContentArea_8h_source.html  ContentWindow_8h_source.html  DebugApplication_8h_source.html  DebugWindow_8h_source.html  Dockerfile  DocumentTree_8h_source.html  Doxyfile  EditorApplication_8h_source.html  EditorWindow_8h_source.html  JumpToByteDialog_8h_source.html  ObjectList_8h_source.html  OpenWindow_8h_source.html  PdfApplication_8h_source.html  PdfArea_8h_source.html  PdfWindow_8h_source.html  README.md  ScrolledZoomedWindow_8h_source.html  allocator_8h_source.html  annotated.html  application_8h_source.html  appveyor.yml  arena__allocator_8h_source.html  build.zig  classBadExpectedAccess-members.html  classBadExpectedAccess.html  classContentArea-members.html  classContentArea.html  classContentWindow-members.html  classContentWindow.html  classDebugApplication-members.html  classDebugApplication.html  classDebugWindow-members.html  classDebugWindow.html  classDocumentTree-members.html  classDocumentTree.html  (+339 more)
.github/workflows/: docs.yml  main.yml  ubuntu.yml  windows.yml
arch-linux/: PKGBUILD
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: CMakeLists.txt
imgui/include/glad/: glad.h
imgui/src/: glad.c
scripts/: download_test_suites.py  embed.py  integration_test.py  test_directory.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+31 more)
src/: CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp  pdf-editor.glade  pdf_reader.cpp  pdf_test.cpp  util.h
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PdfPage.cpp  PdfPage.h  cmd_gui.cpp  cmd_info.cpp  main.cpp  pdf-editor.glade  pdf-page.glade  util.cpp
src/app/cli/: CMakeLists.txt  cmd_delete_page.cpp  cmd_embed.cpp  cmd_extract.cpp  cmd_images.cpp  cmd_info.cpp  cmd_text.cpp  main.cpp  util.h
src/app/common/: CMakeLists.txt  OpenWindow.cpp  OpenWindow.h  PdfApplication.cpp  PdfApplication.h  ScrollableContentWindow.cpp  ScrollableContentWindow.h  ScrolledZoomedWindow.cpp  ScrolledZoomedWindow.h  open.ui
src/app/debugger/: ByteHighlightOverlay.cpp  ByteHighlightOverlay.h  CMakeLists.txt  ContentArea.cpp  ContentArea.h  ContentContainer.cpp  ContentContainer.h  ContentWindow.cpp  ContentWindow.h  DebugApplication.cpp  DebugApplication.h  DebugWindow.cpp  DebugWindow.h  DocumentTree.cpp  DocumentTree.h  JumpToByteDialog.cpp  JumpToByteDialog.h  ObjectList.cpp  ObjectList.h  application.cpp  application.h  debugger.glade  debugger.gresource.xml  debugger.xml  gl.cpp  gl.h  main.cpp  style.css
src/app/editor/: CMakeLists.txt  EditorApplication.cpp  EditorApplication.h  EditorWindow.cpp  EditorWindow.h  PdfArea.cpp  PdfArea.h  PdfPage.cpp  PdfPage.h  PdfStuff.cpp  PdfStuff.h  PdfWindow.cpp  PdfWindow.h  editor.gresource.xml  editor.ui  editor.xml  editor_application.cpp  editor_application.h  editor_window.cpp  editor_window.h  main.cpp
src/app/gtk-examples/: CMakeLists.txt  treeview_example.cpp  treeview_example.h  treeview_example_main.cpp
src/bench/: CMakeLists.txt  allocator_bench.cpp  hash_bench.cpp  md5_bench.cpp  md5_reference.h  reader_bench.cpp  static_map_bench.cpp  static_vector_bench.cpp  writer_bench.cpp
src/cli/: CMakeLists.txt  cmd_delete_page.cpp  cmd_info.cpp  main.cpp
src/lib/: CMakeLists.txt  Lexer.cpp  Parser.cpp  Parser.h  pdf-config.cmake  pdf_file.cpp  pdf_file.h  pdf_graphics.cpp  pdf_lexer.cpp  pdf_lexer.h  pdf_objects.cpp  pdf_objects.h  pdf_operation_parser.cpp  pdf_operation_parser.h  pdf_parser.cpp  pdf_parser.h  pdf_reader.cpp  pdf_reader.h  pdf_text.cpp
src/lib/hash/: hex_string.cpp  hex_string.h  md5.cpp  md5.h  sha1.cpp  sha1.h  util.cpp  util.h
src/lib/md5/: md5.cpp  md5.h  md5_reference.c  mddriver.c
src/lib/pdf/: allocator.cpp  allocator.h  cmap.cpp  cmap.h  document.cpp  document.h  document_io.cpp  document_read.cpp  document_write.cpp  font.cpp  font.h  image.cpp  image.h  lexer.cpp  lexer.h  objects.cpp  objects.h  operator_parser.cpp  operator_parser.h  operator_traverser.cpp  operator_traverser.h  page.cpp  page.h  parser.cpp  parser.h  rectangle.h  renderer.cpp  renderer.h  static_vector.h  util.h
src/lib/pdf/hash/: hex_string.cpp  hex_string.h  md5.cpp  md5.h  sha1.cpp  sha1.h
src/lib/pdf/helper/: allocator.cpp  allocator.h  static_map.h  static_vector.h  util.h
src/lib/pdf/memory/: allocator.cpp  allocator.h  arena_allocator.cpp  arena_allocator.h  stl_allocator.h
src/lib/pdf/util/: allocator.cpp  allocator.h  debug.h  expected.h  process.h  process_linux.cpp  process_win.cpp  result.h  types.h
src/test/: CMakeLists.txt  allocator_test.cpp  cmap_parser_test.cpp  fuzzer.cpp  image_test.cpp  integration_test.py  lexer_test.cpp  md5_test.cpp  operator_parser_test.cpp  parser_test.cpp  process.h  process_linux.cpp  process_win.cpp  reader_test.cpp  render_test.cpp  static_map_test.cpp  static_vector_test.cpp  test_util.h  text_test.cpp  write_object_test.cpp  writer_test.cpp
src/test/hash/: CMakeLists.txt  md5_test.cpp  sha1_test.cpp  util_test.cpp
src/util/: CMakeLists.txt  process.cpp  process.h  process_linux.cpp  process_win.cpp
src/util/util/: allocator.cpp  allocator.h  process.h  process_linux.cpp  process_win.cpp  result.h  static_map.h  static_vector.h  util.h
test/: CMakeLists.txt  lexer_test.cpp  operation_parser_test.cpp  parser_test.cpp  reader_test.cpp
